--- a/webparts/Navigation/index.html
+++ b/webparts/Navigation/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
 
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <script src="../../node_modules/react/dist/react.js"></script>
+    <script src="../../node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <link href="../../dist/webpartTest/aicGlobal.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div id="navigation" style="width:800px;height:350px;"></div>
+    <script src="../../dist/webpartTest/aicGlobal.js"></script>
+    <script type="text/javascript">
+        window.onload = function(){ 
+        window.NavigationRender()};
+    </script>
+</body>
+</html>
